# ultima_chance

./: CMakeLists.txt  black_jack.c  dadi.c  files.c  files.h  finale.c  finale.h  funzioni_utili.c  funzioni_utili.h  giochi.c  giochi.h  main.c  main.h  morra_cinese.c  murra.c  pari_dispari.c  ponte_di_vetro.c  scrematura.c  scrematura.h  svolgimento.c  svolgimento.h
