cmake_minimum_required(VERSION 3.23)
project(davide_flore_66174 C)

set(CMAKE_C_STANDARD 99)

add_executable(davide_flore_66174 main.c files.c files.h main.h funzioni_utili.c funzioni_utili.h scrematura.c scrematura.h giochi.c giochi.h finale.c finale.h svolgimento.c svolgimento.h pari_dispari.c ponte_di_vetro.c dadi.c morra_cinese.c murra.c)
